# al

./: .gitignore  README.md  pyproject.toml
al/: __init__.py  chat.py  cli.py  config.py  note.py  vectordb.py
al/advisors/: __init__.py  kubernetes.py
al/experts/: __init__.py  general.py
demos/: note-add.tape
src/al/: __init__.py  vectordb.py
src/al/experts/: kubernetes.py
