[tool.poetry]
name = "al"
version = "0.1.0"
description = ""
authors = ["chrisaddy <chris.william.addy@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<=3.13"
typer = "^0.12.4"
pydantic = "^2.8.2"
qdrant-client = { extras = ["fastembed"], version = "^1.11.0" }
pyfzf-iter = "^0.0.1"


[tool.poetry.scripts]
al = "al.cli:app"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
