[project]
name = "al"
version = "0.1.0"
description = "personal assistant"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12.4",
    "pydantic>=2.8.2",
    "pyfzf-iter>=0.0.1",
    "instructor>=1.3.7",
    "rich>=13.7.1",
    "langchain-community>=0.2.12",
    "fastembed>=0.3.4",
    "pyfzf>=0.3.1",
    "redis>=5.0.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
compile-bytecode = true


[project.scripts]
al = "al.cli:app"
